# operational-ai-field-notes

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: 01_pytorch_detection_contract.ipynb  02_tensorflow_detection_contract.ipynb  03_yolo_detection_contract_optional.ipynb  04_semantic_segmentation_contract.ipynb  README.md
requirements/: README.md  requirements-dev.txt
src/: README.md  boxes.py  contracts.py  tfhub_det.py  tfhub_det_openimages.py  torchvision_det.py  unet_segmentation_stub.py  viz.py  yolo_ultralytics_det.py
src/nlp/: README.md
src/vision/: README.md  segmentation.py  yolo_ultralytics_det.py
tests/: README.md  test_contracts.py
