[project]
name = "operational-ai-field-notes"
version = "0.2.0"
requires-python = ">=3.10"
description = "Technical field notes on ML systems: objectives, metrics, feedback loops, and where symbolic depth breaks."
readme = "README.md"
license = {file = "LICENSE"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
